--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "sanity"
   ],
   "dependencies": {
+    "@sanity/language-filter": "^4.0.3",
     "@sanity/vision": "^3.77.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sanity": "^3.77.2",
+    "sanity-plugin-media": "^2.3.2",
     "sanity-plugin-vercel-deploy": "^3.3.4",
     "styled-components": "^6.1.8"
   },
