--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sanity"
   ],
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@sanity/language-filter": "^4.0.3",
     "@sanity/vision": "^3.77.2",
     "react": "^18.2.0",
